samples/_failures_safe/1761417612_21567a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf89cbde.c: In function ‘main’:
./samples/SAFE/__tmp_bf89cbde.c:144:32: error: missing terminating " character
  144 |                         printf("%s [%s] %
      |                                ^~~~~~~~~~
./samples/SAFE/__tmp_bf89cbde.c:144:25: error: expected expression at end of input
  144 |                         printf("%s [%s] %
      |                         ^~~~~~
./samples/SAFE/__tmp_bf89cbde.c:144:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf89cbde.c:144:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf89cbde.c:144:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf89cbde.c:144:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf89cbde.c:144:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf89cbde.c:144:25: error: expected declaration or statement at end of input
